Bugfix for visible navbar ul in mobile view

--- a/css/scss/components/_nav.scss
+++ b/css/scss/components/_nav.scss
@@ -146,6 +146,7 @@ nav>ul>li:hover {
 @media only screen and (max-width:768px) {
     nav>ul {
         height: 0;
+        display: none;
         opacity: 0;
         float: none;
         
